fix docs, preciseness

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sixflix",
   "version": "1.0.0",
-  "description": "Detects whether a browser supports ES6",
+  "description": "Detects whether a host environment supports ES6",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
